examples/test/testpolicy16970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16970
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key16: value32
      key44: value24
      key46: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value37
          key5: value9
          key17: value47
      podSelector:
        matchLabels:
          key23: value41
          key34: value5
          key36: value39
